# git-log-pretty

./: Cargo.toml  README.md  flake.nix
crates/git-log-pretty/: Cargo.toml
crates/git-log-pretty/src/: avatar.rs  display.rs  git.rs  main.rs  render.rs  time.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/kitty/: Cargo.toml
crates/kitty/src/: lib.rs
src/: colors.rs  display.rs  git.rs  icons.rs  main.rs
