[workspace]
resolver = "2"
members = ["crates/kitty", "crates/github", "crates/git-log-pretty"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/andrewgazelka/git-log-pretty"

[workspace.dependencies]
kitty = { path = "crates/kitty" }
github = { path = "crates/github" }
