[package]
name = "git-log-pretty"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kitty.workspace = true
github.workspace = true

chrono = "0.4.41"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
devicons = "0.6.12"
eyre = "0.6.12"
git2 = "0.20.2"
regex = "1.11.1"
terminal-light = "1.8.0"
